--- a/sorpresa.html
+++ b/sorpresa.html
@@ -8,7 +8,7 @@
     margin: 0;
     padding: 20px;
     background-color: #FFC0CB;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", sans-serif;
     text-align: center;
     color: black;
   }
